samples/_failures_safe/1761327265_aae466_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecebaa1a.c: In function ‘main’:
./samples/SAFE/__tmp_ecebaa1a.c:159:12: error: missing terminating " character
  159 |     printf("Compressed data
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ecebaa1a.c:159:5: error: expected expression at end of input
  159 |     printf("Compressed data
      |     ^~~~~~
./samples/SAFE/__tmp_ecebaa1a.c:159:5: error: expected declaration or statement at end of input
